PWCT Project/First Generation/Applications/Projects/HarbourPWCT_SupernovaProgrammingLanguage/Samples/Errors/MixUnexpectedEndWhileUnclosedWhile.nova
Application title = Error.

I want window and window title = Error.
Window height = 130.


endwhile
do while [x] = (1).